fix link hover flicker

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -16,6 +16,10 @@
 }
 
 body {
+  a:hover, a:focus {
+      color: #046;
+      font-weight: normal;
+  }
   padding: 0;
   header {
     width: 340px;
